<resources>
    <string name="app_name">SGMOS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_local_serv">Map</string>
    <string name="hint_email">Email ou Matricula</string>
    <string name="hint_matricula">Matricula</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTRO</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Já esta registrado, entre por aqui.</string>
    <string name="welcome">Bem vindo</string>
    <string name="btn_logout">Desconectar</string>
    <string name="name">Fullname</string>
    <string name="email">Email</string>
    <string name="matricula">Matricula</string>
    <string name="nome">Nome</string>
    <string name="registre_se_aqui">Registre-se aqui!!!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="meus_servi_os">Meus Serviços</string>
    <string name="notifica_es">Notificações</string>
    <string name="servi_os_pendentes">Serviços Pendentes</string>
    <string name="title_activity_menu_perfil">MenuPerfilActivity</string>


    <string name="action_realizar">Realizar Serviço</string>

    <string name="action_salvar_ar">Salvar Dados</string>

    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="title_activity_list_serv_pendente">ListServPendente</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="descri_o_refrigerador">Descrição Refrigerador:</string>
    <string name="descri_o_tecnica_do_problema">Descrição Tecnica do Problema:</string>
    <string name="descri_o_do_cliente_do_problema">Descrição do Cliente sobre Problema:</string>
    <string name="ordem_service">Ordem Service</string>
    <string name="ordem_service_finish">Finalizar</string>
    <string name="title_activity_menu_drawer">MenuDrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="action_nav_manage">Settings</string>

    <string name="action_serv_pen">Serviços Pendentes</string>
    <string name="action_my_serv">Meus Serviços</string>
    <string name="action_notifica">Notificações</string>
    <string name="action_detal_conta">Informações</string>
    <string name="action_sair">Desconectar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_serveces_tab">ServecesTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_inform">InformActivity</string>
</resources>
