<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingRight="-9dp"
    android:weightSum="1"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="502dp"
                android:gravity="top|start"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/btn_desconectar"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0.45"
                    android:background="@color/btn_logut_bg"
                    android:text="@string/btn_logout"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_ServPen"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.83"
                    android:background="@color/colorPrimary"
                    android:elevation="6dp"
                    android:fontFamily="casual"
                    android:paddingTop="15dp"
                    android:text="@string/servi_os_pendentes"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute" />

                <Button
                    android:id="@+id/btn_MyServ"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:fontFamily="casual"
                    android:paddingTop="15dp"
                    android:text="@string/meus_servi_os"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute" />

                <Button
                    android:id="@+id/btn_Notifi"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:fontFamily="casual"
                    android:paddingTop="15dp"
                    android:text="@string/notifica_es"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
