<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="-9dp"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_detal_serv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@color/colorAccent"
        app:title="uuuu"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:titleTextColor="@color/colorAccent" />

    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tb_detal_serv"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="InefficientWeight,UselessParent">

        <ScrollView
            android:id="@+id/scrollViewDetalServ"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tb_detal_serv"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tb_detal_serv"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/text21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="4dp"
                        android:text="Data/Hora: "
                        android:textColor="@color/bg_register"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/dataView"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:paddingBottom="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:text="31/07/2017"
                        android:textColor="@color/bg_register"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView90"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="4dp"
                        android:text="ás"
                        android:textColor="@color/bg_register"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/horaView"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:paddingBottom="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:text="13:00"
                        android:textColor="@color/bg_register"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="4dp"
                        android:text="Endereço: "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvEnder"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:paddingBottom="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:text="Rua humaitá, 28, Terra nova 2"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvComplem"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:elevation="1dp"
                        android:gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:text="prox. mercadinho surpresa"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.13"
                        android:text="69093078"
                        android:textSize="17sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/text23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="4dp"
                        android:text="Contatos: "
                        android:textColor="@color/bg_register"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnFone1"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="#fff"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="992209097"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/"
                        android:textColor="@color/bg_register"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/btnFone2"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="#fff"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="35422720"
                        android:textSize="18sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnMapServPen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="0.08"
                    android:alpha="0.9"
                    android:elevation="8dp"
                    android:fontFamily="sans-serif"
                    android:padding="15dp"
                    android:text="Localização via GPS (MAPA)"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/descri_o_tecnica_do_problema"
                    android:textColor="@color/lbl_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Descrição Tecnica do Problema:" />

                <TextView
                    android:id="@+id/tvDescrTec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:background="@color/common_google_signin_btn_text_dark_disabled"
                    android:paddingBottom="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="8dp"
                    android:shadowColor="@color/common_google_signin_btn_text_light_default"
                    android:text="TextView"
                    android:textColor="@color/bg_register" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/descri_o_do_cliente_do_problema"
                    android:textColor="@color/lbl_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Descrição do Cliente sobre Problema:" />

                <TextView
                    android:id="@+id/tvDescriCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:background="@color/common_google_signin_btn_text_dark_disabled"
                    android:paddingBottom="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="8dp"
                    android:text="TextView"
                    android:textColor="@color/bg_register" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/descri_o_refrigerador"
                    android:textColor="@color/lbl_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Descrição Refrigerador:" />

                <TextView
                    android:id="@+id/tvDEscriRefri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:background="@color/common_google_signin_btn_text_dark_disabled"
                    android:paddingBottom="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="8dp"
                    android:text="TextView"
                    android:textColor="@color/bg_register" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10.09"
                        android:text="Foto 1 (Refrigerador):"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgViewFoto1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10.09"
                        android:scaleType="center"
                        app:srcCompat="@drawable/camera_enhance" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10.09"
                        android:text="Foto 2 (Refrigerador):"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgViewFoto2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10.09"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/camera" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10.09"
                        android:text="Foto 3 (Refrigerador):"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgViewFoto3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10.09"
                        android:adjustViewBounds="false"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/camera" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


    <include
        android:id="@+id/inc_tb_botton"
        layout="@layout/toolbar_botton"/>

</RelativeLayout>
